Bug 1488192: Return input if no characters were modified in decode/encodeURI. r=jandem